--- a/Home.html
+++ b/Home.html
@@ -48,10 +48,11 @@
         </ol>
     </div>
 </div>
+
 <div id='mainphoto'>
     <img alt="photograph"
     src="MainPhoto.jpg"
-    width="150px" height="150px">
+    width="729px" height="1296px">
 </div>
 
 <div id='content'>
@@ -68,6 +69,12 @@
 
 <div id='footer'>
     <p>Please don't email me at charles.walker@academytrainee.com</p>
+</div>
+
+<div id='music'>
+    <audio>
+        <source src="bigblastsonic.mp3" type="audio/mp3">
+    </audio>
 </div>
 </html>
 
